# LLM_finetune_tutorial

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
experimentation/: README.md  dpo.py  utils_sft.py
experimentation/dataclass/: dpo_args.py
experimentation/dpo/: adaptor_merge.py  dpo.py  sft.py
experimentation/dpo/dataclass/: sft_args.py
experimentation/dpo/wandb/run-20231210_142121-wb7xvhm3/: run-wb7xvhm3.wandb
experimentation/dpo/wandb/run-20231210_142617-e5ir0vi6/: run-e5ir0vi6.wandb
experimentation/dpo/wandb/run-20231210_143813-qcrlnlyj/: run-qcrlnlyj.wandb
experimentation/dpo/wandb/run-20231210_144628-d6q12afh/: run-d6q12afh.wandb
experimentation/dpo/wandb/run-20231210_150713-dfy1epq2/: run-dfy1epq2.wandb
experimentation/launch_scripts/: run_dpo.sh  run_merge_adaptor.sh  run_sft.sh
experimentation/wandb/: latest-run
experimentation/wandb/run-20231210_142121-wb7xvhm3/files/: config.yaml  wandb-metadata.json
experimentation/wandb/run-20231210_142617-e5ir0vi6/files/: config.yaml
experimentation/wandb/run-20231210_143706-8wnlpds5/: run-8wnlpds5.wandb
experimentation/wandb/run-20231210_145131-au5gpx2r/: run-au5gpx2r.wandb
experimentation/wandb/run-20231210_150810-t13xniuo/: run-t13xniuo.wandb
experimentation/wandb/run-20231210_150920-wfq1rlya/: run-wfq1rlya.wandb
experimentation/wandb/run-20231211_185734-1atxvymz/: run-1atxvymz.wandb
experimentation/wandb/run-20231211_194140-r6w5a5lg/: run-r6w5a5lg.wandb
experimentation/wandb/run-20231211_194649-1pbrr591/: run-1pbrr591.wandb
(+33 files in other folders)
