[tool.poetry]
name = "finetune"
version = "0.1.0"
description = ""
authors = ["cm2435 <cm2435@bath.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
datasets = "^2.15.0"
huggingface = "^0.0.1"
torch = "^2.1.1"
pre-commit = "^3.5.0"
trl = "^0.7.4"
pydantic = "^2.5.2"
peft = "^0.7.0"
transformers = "^4.35.2"


[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
